flux/apps/vaultwarden/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: self-hosted
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "bitwarden.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
